# disc-aaai20

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  setup.py
examples/: disc-iris.ipynb
examples/.ipynb_checkpoints/: disc-iris-checkpoint.ipynb
include/bitcontainer/: bit_view.hxx  bitcontainer.hxx  bitset.hxx  sparse_bitset.hxx
include/bitcontainer/extra/: fwd_iterator.hxx
include/containers/: SmallVector.h  random-access-set.hxx  small_vector.hxx
include/datatable/: data_table.hxx  zip_iterator.hxx
include/dbscan/: dbscan-desc.hpp  dbscan.hpp
include/desc/: CandidateGeneration.hxx  CharacterizeComponents.hxx  Desc.hxx  DescMDL.hxx  PatternAssignment.hxx  PatternsetMiner.hxx
include/desc/distribution/: Distribution.hxx  IterativeScaling.hxx  MaxEntFactor.hxx  RelaxedFactorModel.hxx  StaticFactorModel.hxx  Transactions.hxx
include/desc/utilities/: BoostMultiprecision.hxx  FactorPruning.hxx  ModelPruning.hxx  counting_iterator.h
include/disc/: BIC.hxx  CharacterizeSplit.hxx  DataAssignment.hxx  Disc.hxx  Encoding.hxx  MDL.hxx  Settings.hxx  TestDivergence.hxx
include/disc/desc/: BIC.hxx  CandidateGeneration.hxx  CharacterizeComponents.hxx  Component.hxx  Composition.hxx  Desc.hxx  DescHeuristic.hxx  Encoding.hxx  Frequencies.hxx  InsertMissingSingletons.hxx  MDL.hxx  ModelPruning.hxx  PatternAssignment.hxx  PatternsetMiner.hxx  Settings.hxx  Support.hxx
include/disc/disc/: AssignPatternToComponents.hxx  BIC.hxx  CharacterizeComponents.hxx  CharacterizeSplit.hxx  Composition.hxx  DataAssignment.hxx  Decompose.hxx  DecomposeContext.hxx  Desc.hxx  DescHeuristic.hxx  Disc.hxx  DiscoverPatternset.hxx  DiscoverPatternsets.hxx  DiscoverPatternsetsActualGain.hxx  Encoding.hxx  Frequencies.hxx  HeuristicScore.hxx  InsertMissingSingletons.hxx  MDL.hxx  PatternsetMinerGeneric.hxx  PatternsetResult.hxx  ReassignComponents.hxx  Settings.hxx  SlimCandidateGeneration.hxx  TestDivergence.hxx
include/disc/distribution/: BitPermutation.hxx  Distribution.hxx  FactorPruning.hxx  FactorizedModel.hxx  IncrementBitset.hxx  InferProbabilities.hxx  IterativeScaling.hxx  MaxEntFactor.hxx  MultiModel.hxx  StaticFactorModel.hxx  Transactions.hxx
include/disc/interfaces/: BoostMultiprecision.hxx  MTV.hxx
include/disc/io/: MappedIO.hxx  ReadDataset.hxx  Serialize.hxx  WriteDataset.hxx
include/disc/storage/: Dataset.hxx  Itemset.hxx
include/disc/utilities/: FactorPruning.hxx  MeasureElapsedTime.hxx  ModelPruning.hxx  Purity.hxx  PvalueNHC.hxx  Redundancy.hxx  SizeOfUnion.hxx  Support.hxx  UniversalIntEncoding.hxx  WeakNumberComposition.hxx
include/marray/: marray.hxx
include/math/: IncrementalStatistics.hxx  RunningStatistics.hxx  nchoosek.hxx
include/trie/: Trie.hxx
src/bindings/R/: RDisc.cpp
src/bindings/common/: TraitBuilder.hxx
src/bindings/cython/: CyDisc.hpp  CyDisc.pyx  Untitled.ipynb
src/bindings/cython/.ipynb_checkpoints/: CyDisc-checkpoint.hpp  CyDisc-checkpoint.pyx  cy-checkpoint.hpp
src/bindings/python/: CMakeLists.txt  PyDisc.cpp  Utilities.hxx
src/pybind11/: PyDisc.cpp  Utilities.hxx
src/rcpp/: RDisc.cpp  RcppDisc.cpp
unittests/: CMakeLists.txt  TrivialTest.hxx
unittests/bitcontainer/: test-bitset.cxx
